<resources>
    <string name="app_name">SmarTutor</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_student_menu">StudentMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home_student">Home</string>
    <string name="menu_home_tutor">Home</string>
    <string name="menu_edit_details_student">Edit Details</string>
    <string name="menu_edit_details_tutor">Edit Details</string>
    <string name="menu_search_tutors_student">Search Tutors</string>
    <string name="menu_tutor_details_student">Tutor Details</string>
    <string name="menu_delete_account_student">Delete Account</string>
    <string name="menu_delete_account_tutor">Delete Account</string>
    <string name="title_activity_tutor_menu">TutorMenuActivity</string>
    <string name="menu_my_feed_tutor">My Feed</string>
    <string name="subject">subject</string>
    <string name="menu_feed_student">Feed</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>