<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home_tutor"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home_tutor"/>
        <item
            android:id="@+id/nav_edit_details_tutor"
            android:icon="@drawable/ic_menu_edit"
            android:title="@string/menu_edit_details_tutor" />
        <item
            android:id="@+id/nav_my_feed_tutor"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_my_feed_tutor" />
        <item
            android:id="@+id/nav_delete_account_tutor"
            android:icon="@drawable/ic_menu_delete"
            android:title="@string/menu_delete_account_tutor" />

    </group>
</menu>