<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home_student"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home_student"/>
        <item
            android:id="@+id/nav_edit_details_student"
            android:icon="@drawable/ic_menu_edit"
            android:title="@string/menu_edit_details_student" />
        <item
            android:id="@+id/nav_search_tutors_student"
            android:icon="@drawable/ic_menu_search"
            android:title="@string/menu_search_tutors_student" />

        <item
            android:id="@+id/nav_delete_account_student"
            android:icon="@drawable/ic_menu_delete"
            android:title="@string/menu_delete_account_student" />

    </group>
</menu>