<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menu_tutor_nav_graph"
    app:startDestination="@+id/nav_home_tutor">

    <fragment
        android:id="@+id/nav_home_tutor"
        android:name="com.example.smartutor.ui.home_tutor.HomeTutorFragment"
        android:label="@string/menu_home_tutor"
        tools:layout="@layout/fragment_home_tutor" >
        <action
            android:id="@+id/action_nav_home_tutor_to_lessonDetailsTutorFragment"
            app:destination="@id/lessonDetailsTutorFragment" />
        <action
            android:id="@+id/action_nav_home_tutor_to_availableTutorFragment"
            app:destination="@id/availableTutorFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_edit_details_tutor"
        android:name="com.example.smartutor.ui.edit_details_tutor.EditDetailsTutorFragment"
        android:label="@string/menu_edit_details_tutor"
        tools:layout="@layout/fragment_edit_details_tutor" />
    <fragment
        android:id="@+id/nav_delete_account_tutor"
        android:name="com.example.smartutor.ui.delete_account_tutor.DeleteAccountTutorFragment"
        android:label="@string/menu_delete_account_tutor"
        tools:layout="@layout/fragment_delete_account_tutor" />
    <fragment
        android:id="@+id/lessonDetailsTutorFragment"
        android:name="com.example.smartutor.ui.lesson_details_tutor.LessonDetailsTutorFragment"
        android:label="fragment_lesson_details_tutor"
        tools:layout="@layout/fragment_lesson_details_tutor" />
    <fragment
        android:id="@+id/availableTutorFragment"
        android:name="com.example.smartutor.ui.available_tutor.AvailableTutorFragment"
        android:label="fragment_available_tutor"
        tools:layout="@layout/fragment_available_tutor" />
    <fragment
        android:id="@+id/nav_my_feed_tutor"
        android:name="com.example.smartutor.MyFeedFragment"
        android:label="@string/menu_my_feed_tutor"
        tools:layout="@layout/fragment_my_feed" />
</navigation>